fix exclude switch alignment

--- a/src/components/MainUI/MapPOI/style.css
+++ b/src/components/MainUI/MapPOI/style.css
@@ -7,8 +7,8 @@
  * Author : LGS1920 Team
  * email: contact@lgs1920.fr
  *
- * Created on: 2025-06-23
- * Last modified: 2025-06-23
+ * Created on: 2025-06-24
+ * Last modified: 2025-06-24
  *
  *
  * Copyright © 2025 LGS1920
@@ -451,7 +451,12 @@
 }
 .map-poi-category-filter {
     display: flex;
+    align-content: center;
     gap: var(--lgs-gutter-s);
+}
+
+.map-poi-category-filter sl-switch {
+    margin-left: auto;
 }
 
 .map-poi-category-selector-filter {
