--- a/src/components/TracksEditor/style.css
+++ b/src/components/TracksEditor/style.css
@@ -7,8 +7,8 @@
  * Author : LGS1920 Team
  * email: contact@lgs1920.fr
  *
- * Created on: 2025-04-28
- * Last modified: 2025-04-28
+ * Created on: 2025-06-24
+ * Last modified: 2025-06-24
  *
  *
  * Copyright © 2025 LGS1920
@@ -32,10 +32,6 @@
     display: flex;
     align-items: center;
     color: inherit;
-}
-
-#journey-editor-drawer sl-switch {
-    padding-top: 3px;
 }
 
 #journey-editor-drawer sl-switch::part(control) {
